--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,10 @@ spring.application.name=carepose
 
 server.port=8084
 
+spring.web.resources.static-locations=classpath:/static/,file:///C:/carepose-images/
+
+spring.web.resources.cache.period=0
+spring.web.resources.chain.cache=false
 
 spring.datasource.url=jdbc:mysql://project-db-campus.smhrd.com:3307/carepose123
 spring.datasource.username=carepose123
