--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=carepose
 
+server.address=0.0.0.0
 server.port=8084
 
 spring.web.resources.static-locations=classpath:/static/,file:///C:/carepose-images/
