--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.datasource.url=jdbc:mysql://project-db-campus.smhrd.com:3307/carepose123
 spring.datasource.username=carepose123
 spring.datasource.password=care123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# 세션 유지 시간을 12시간(720분)으로 설정
+server.servlet.session.timeout=120m
